redirection-linked to archive.org audio downloads

--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -2,5 +2,6 @@
   action: >
     {{ ansible_pkg_mgr }} name={{ item }} state=present update_cache=yes
   with_items:
-     - sqlite
-
+    - sqlite
+    - eye3d
+    - libxml2-utils
