--- a/vars/podcast.yml
+++ b/vars/podcast.yml
@@ -22,9 +22,9 @@ itunes:
   subtitle: watch the #sgr podcast on shiftgetsreal.com
   summary: shift gets real with powerful and shifting conversations from the mindware of dimitri and ashley snowden
   description: shift gets real with powerful and shifting conversations from the mindware of dimitri and ashley snowden. a new episode will drop every wednesday! watch the #sgr podcast on shiftgetsreal.com
-  author: Dimitri Snowden
+  author: Ashley Snowden and Dimitri Snowden
   owner:
-    name: Dimitri Snowden
+    name: Ashley Snowden and Dimitri Snowden
     email: dimitri@dimitrisnowden.com
   image:
     url: https://raw.githubusercontent.com/nilesingalls/podcasts/shiftgetsreal/images/61788105_2316443471942346_7946230543220211712_n.png
