fixed an & issue

--- a/vars/podcast.yml
+++ b/vars/podcast.yml
@@ -22,14 +22,14 @@ itunes:
   subtitle: Shift Gets Real with Dimitri and Ashley Snowden
   summary: Shift Gets Real with powerful and shifting conversations from the mindware of Dimitri and Ashley Snowden. New episode every Wednesday.
   description: Shift Gets Real with powerful and shifting conversations from the mindware of Dimitri and Ashley snowden.  New episode every Wednesday.
-  author: Dimitri Snowden &#38; Ashley Snowden
+  author: 'Dimitri Snowden &amp; Ashley Snowden'
   owner:
-    name: Dimitri Snowden &#38; Ashley Snowden
+    name: 'Dimitri Snowden &amp; Ashley Snowden'
     email: podcast@thesnowdenfamily.com
   image:
     url: https://raw.githubusercontent.com/nilesingalls/podcasts/shiftgetsreal/images/61788105_2316443471942346_7946230543220211712_n.png
   category:
-    category: Society &#38; Culture
-    text: Society &#38; Culture
+    category: 'Society &amp; Culture'
+    text: 'Society &amp; Culture'
   explicit: yes
 
