--- a/vars/podcast.yml
+++ b/vars/podcast.yml
@@ -30,6 +30,6 @@ itunes:
     url: https://raw.githubusercontent.com/nilesingalls/podcasts/shiftgetsreal/images/61788105_2316443471942346_7946230543220211712_n.png
   category:
     category: 'Society &amp; Culture'
-    text: 'Personal Journals'
+    text: ''
   explicit: 'yes'
 
