--- a/tasks/archive.yml
+++ b/tasks/archive.yml
@@ -12,6 +12,14 @@
     body_format: json
   register: archive
 
+- name: build some download stats
+  set_fact:
+    downloads: "{{ downloads | default() }} + 'Description: {{ item.description }} - Downloads: {{ item.downloads }}\n'"
+  loop: "{{ archive.json.response.docs }}"
+
+- debug: msg="{{ downloads }}"
+- meta: end_play
+
 # grab media locally to extract metadata.  (no id3 tags)
 - name: populate podcast items
   include: tasks/getpod.yml
