new pocast, and updated package requirements

--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -2,6 +2,7 @@
   action: >
     {{ ansible_pkg_mgr }} name={{ item }} state=present update_cache=yes
   with_items:
+    - nawk
     - sqlite
     - eye3d
     - libxml2-utils
